--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,92 +1,29 @@
-{% load static %}
-
-<link rel="stylesheet" type="text/css" href="{% static 'bs/css/bootstrap.css' %}" />
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'accounts/styles/forms.css' %}">
-    <title>Signup</title>
-</head>
-
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand text-uppercase fw-bold fs-3" href="{% url 'home' %}">forum</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
-                    </li> -->
-                </ul>
-                <ul class="navbar-nav d-flex">
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-btn px-3 py-1 me-2 fw-bold" href="#">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-btn px-3 py-1" href="#">Register</a>
-                    </li>
-                </ul>
-                <!-- <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form> -->
-            </div>
-        </div>
-    </nav>
-
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col d-flex justify-content-center pt-5">
-                <form action="." class="register-table p-2 m-0" method="POST">
-                    {% csrf_token %}
-                    <label for="inputUsername" class="form-label pt-3 fw-bold text-uppercase">Username:</label><br> {{form.username}} <br>
-                    <label for="inputPassword" class="form-label pt-3 fw-bold text-uppercase">Password:</label><br> {{form.password1}} <br>
-                    <div id="passwordHelpBlock" class="form-text">
-                        <p class="m-0">Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only. Password:</p>
-                        <ul>
-                            <li>Your password can’t be too similar to your other personal information.</li>
-                            <li>Your password must contain at least 8 characters.</li>
-                            <li>Your password can’t be a commonly used password.</li>
-                            <li>Your password can’t be entirely numeric.</li>
-                        </ul>
-                    </div>
-                    <label for="inputPassword" class="form-label fw-bold text-uppercase">Repeat Password:</label><br> {{form.password2}}<br> {% for field in form %}{% for error in field.errors %}
-                    <small class="error-msg pt-3">{{error}}</small> {% endfor %} {% endfor %}
-                    <div class="d-grid gap-2 col-6 mx-auto pt-4">
-                        <input class="btn text-uppercase fw-bold" type="submit" value="Signup">
-                    </div>
-                </form>
-            </div>
+{% extends "../forum/templates/forum/base.html" %} {% block head %} {% load static %} {% load hitcount_tags %}
+<title>Register</title>
+{% endblock %} {% block content %}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col d-flex justify-content-center pt-5">
+            <form action="." class="register-table p-2 m-0" method="POST">
+                {% csrf_token %}
+                <label for="inputUsername" class="form-label pt-3 fw-bold text-uppercase">Username:</label><br> {{form.username}} <br>
+                <label for="inputPassword" class="form-label pt-3 fw-bold text-uppercase">Password:</label><br> {{form.password1}} <br>
+                <div id="passwordHelpBlock" class="form-text">
+                    <p class="m-0">Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only. Password:</p>
+                    <ul>
+                        <li>Your password can’t be too similar to your other personal information.</li>
+                        <li>Your password must contain at least 8 characters.</li>
+                        <li>Your password can’t be a commonly used password.</li>
+                        <li>Your password can’t be entirely numeric.</li>
+                    </ul>
+                </div>
+                <label for="inputPassword" class="form-label fw-bold text-uppercase">Repeat Password:</label><br> {{form.password2}}<br> {% for field in form %}{% for error in field.errors %}
+                <small class="error-msg pt-3">{{error}}</small> {% endfor %} {% endfor %}
+                <div class="d-grid gap-2 col-6 mx-auto pt-4">
+                    <input class="btn" type="submit" value="Register">
+                </div>
+            </form>
         </div>
     </div>
-</body>
-
-</html>
+</div>
+{% endblock %}
