--- a/forum/templates/forum/base.html
+++ b/forum/templates/forum/base.html
@@ -65,6 +65,11 @@
         </div>
     </nav>
     {% block content %} {% endblock %}
+    <div class="row">
+        <div class="col footer text-center py-3">
+            django forum
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
 </body>
