--- a/accounts/templates/accounts/profile2.html
+++ b/accounts/templates/accounts/profile2.html
@@ -10,7 +10,7 @@
                 <label for="inputPassword" class="form-label pt-3 fw-bold text-uppercase m-0">Bio: </label><br><small class="fst-italic"> Optional</small><br> {{form.bio}} <br>
                 <label for="inputPassword" class="form-label pt-3 fw-bold text-uppercase">Profile Image:</label><br>{{form.profile_pic}}
                 <div class="d-grid gap-2 col-6 mx-auto pt-4">
-                    <input class="btn text-uppercase fw-bold" type="submit" value="Update">
+                    <input class="btn" type="submit" value="Update">
                 </div>
             </form>
         </div>
