--- a/posts/templates/posts/posts.html
+++ b/posts/templates/posts/posts.html
@@ -31,7 +31,7 @@
                 <div class="col post-side-info border-start border-dark ps-1 p-1">
                     <div class="row">
                         <div class="col-12">
-                            <p class="text-center m-0 p-0 fw-bold">Latest Reply</p>
+                            <p class="text-center m-0 p-0 fw-bold">Latest Comment From</p>
                         </div>
                         <div class="col-2 m-1">
                             <img src="{{post.last_reply.user.profile_pic.url}}" alt="user-avatar" class="lr-user-avatar">
